[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .container{
-    color:grey;
+    color:white;
     background-color:silver;
     margin-left:60px;
     font-family:sans-serif;
